--- a/planify/package.json
+++ b/planify/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "@remix-run/router": "^1.19.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -11,6 +12,8 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "express": "^4.19.2",
+    "gapi-script": "^1.2.0",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.6.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
